--- a/index.html
+++ b/index.html
@@ -8,6 +8,372 @@
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 	</head>
 	<body>
+
+    <!-- header -->
+		<nav
+			class="navbar navbar-expand-lg shadow-lg fixed-top"
+			style="background-color: #ffffff"
+			data-bs-theme="light"
+		>
+			<div class="container">
+				<a class="navbar-brand fw-bold" href="#">MToko</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">Home</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a
+								class="nav-link dropdown-toggle"
+								href="#"
+								role="button"
+								data-bs-toggle="dropdown"
+								aria-expanded="false"
+							>
+								Kategori
+							</a>
+							<ul class="dropdown-menu">
+								<li><a class="dropdown-item" href="#">Action</a></li>
+								<li><a class="dropdown-item" href="#">Another action</a></li>
+								<li><hr class="dropdown-divider" /></li>
+								<li>
+									<a class="dropdown-item" href="#">Something else here</a>
+								</li>
+							</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Promo</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Tentang Toko</a>
+						</li>
+					</ul>
+					<div class="d-flex">
+						<button class="btn btn-outline-dark px-4 mx-1">Masuk</button>
+						<button class="btn btn-outline-success px-4 mx-1">Daftar</button>
+					</div>
+				</div>
+			</div>
+		</nav>
+		<!-- header -->
+
+    
+		<!-- carousel -->
+		<div class="container" style="margin-top: 70px">
+			<div class="card">
+				<div class="card-body">
+					<div id="carouselExample" class="carousel slide">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img
+									src="https://cdn-image.bayupriyambada.repl.co/img/slide1.png"
+									class="d-block w-100 rounded shadow"
+									alt="Carousel Image 1"
+								/>
+							</div>
+							<div class="carousel-item">
+								<img
+									src="https://cdn-image.bayupriyambada.repl.co/img/slide2.png"
+									class="d-block w-100 rounded shadow"
+									alt="Carousel Image 2"
+								/>
+							</div>
+							<div class="carousel-item">
+								<img
+									src="https://dummyimage.com/1200x350/3498db/ffffff&text=Carousel+Image+1"
+									class="d-block w-100 rounded shadow"
+									alt="Carousel Image 3"
+								/>
+							</div>
+						</div>
+						<button
+							class="carousel-control-prev"
+							type="button"
+							data-bs-target="#carouselExample"
+							data-bs-slide="prev"
+						>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="32"
+								height="32"
+								fill="currentColor"
+								class="bi bi-arrow-left-square-fill"
+								viewBox="0 0 16 16"
+							>
+								<path
+									d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z"
+								/>
+							</svg>
+						</button>
+						<button
+							class="carousel-control-next"
+							type="button"
+							data-bs-target="#carouselExample"
+							data-bs-slide="next"
+						>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="32"
+								height="32"
+								fill="currentColor"
+								class="bi bi-arrow-right-square-fill"
+								viewBox="0 0 16 16"
+							>
+								<path
+									d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1z"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- carousel -->
+
+		<!-- sidebar && products -->
+		<div class="container my-4">
+			<div class="row g-2">
+				<div class="col-12 col-md-4 col-sm-4">
+					<div class="card">
+						<div class="card-body">
+							<div class="row gy-4">
+								<div class="col-12">
+									<input
+										type="search"
+										class="form-control"
+										placeholder="Cari berdasarkan nama produk..."
+									/>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="card mt-2">
+						<div class="card-body">
+							<div class="row gy-4">
+								<div class="col-12">
+									<select
+										class="form-select"
+										aria-label="Default select example"
+									>
+										<option value="all-kategori">Pilihan Kategori</option>
+										<option value="1">One</option>
+										<option value="2">Two</option>
+										<option value="3">Three</option>
+									</select>
+								</div>
+								<div class="col-12">
+									<select
+										class="form-select"
+										aria-label="Default select example"
+									>
+										<option selected>Pilihan Toko</option>
+										<option value="1">One</option>
+										<option value="2">Two</option>
+										<option value="3">Three</option>
+									</select>
+								</div>
+								<div class="col-12">
+									<select
+										class="form-select"
+										aria-label="Default select example"
+									>
+										<option selected>Pilihan Harga</option>
+										<option value="1">Rp. 20.000 - 50.0000</option>
+										<option value="1">Rp. 50.000 - 100.0000</option>
+										<option value="1">Rp. 100.000 - 200.0000</option>
+									</select>
+								</div>
+								<div class="col-12">
+									<div class="d-grid">
+										<button class="btn btn-dark">Filtering</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-8 col-sm-8">
+					<div class="card">
+						<div class="card-body">
+							<span>Total <b id="count"></b> Produk</span>
+						</div>
+					</div>
+					<div class="card mt-2">
+						<div class="card-body">
+							<div class="row g-2">
+								<div class="col-sm-3 col-md-4 col-12">
+									<div class="card">
+										<img
+											src="https://cdn-image.bayupriyambada.repl.co/img/prod/1.png"
+											class="card-img-top"
+											heigth="250"
+											alt="Gambar 1"
+										/>
+										<div class="card-body">
+											<h5 class="card-title">Title Ecommerce</h5>
+											<p class="card-text">
+												Some quick example text to build on the card
+											</p>
+										</div>
+										<ul class="list-group list-group-flush">
+											<li class="list-group-item">Kategori Dummy</li>
+											<li class="list-group-item">Rp. 50.000</li>
+											<li class="list-group-item">Shop Name</li>
+										</ul>
+										<div class="card-body">
+											<a href="#" class="d-block btn btn-dark"
+												>Tambah Keranjang</a
+											>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-3 col-md-4 col-12">
+									<div class="card">
+										<img
+											src="https://cdn-image.bayupriyambada.repl.co/img/prod/2.png"
+											class="card-img-top"
+											heigth="250"
+											alt="Gambar 1"
+										/>
+										<div class="card-body">
+											<h5 class="card-title">Title Ecommerce</h5>
+											<p class="card-text">
+												Some quick example text to build on the card
+											</p>
+										</div>
+										<ul class="list-group list-group-flush">
+											<li class="list-group-item">Kategori Dummy</li>
+											<li class="list-group-item">Rp. 50.000</li>
+											<li class="list-group-item">Shop Name</li>
+										</ul>
+										<div class="card-body">
+											<a href="#" class="d-block btn btn-dark"
+												>Tambah Keranjang</a
+											>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-3 col-md-4 col-12">
+									<div class="card">
+										<img
+											src="https://cdn-image.bayupriyambada.repl.co/img/prod/3.png"
+											class="card-img-top"
+											heigth="250"
+											alt="Gambar 1"
+										/>
+										<div class="card-body">
+											<h5 class="card-title">Title Ecommerce</h5>
+											<p class="card-text">
+												Some quick example text to build on the card
+											</p>
+										</div>
+										<ul class="list-group list-group-flush">
+											<li class="list-group-item">Kategori Dummy</li>
+											<li class="list-group-item">Rp. 50.000</li>
+											<li class="list-group-item">Shop Name</li>
+										</ul>
+										<div class="card-body">
+											<a href="#" class="d-block btn btn-dark"
+												>Tambah Keranjang</a
+											>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-3 col-md-4 col-12">
+									<div class="card">
+										<img
+											src="https://cdn-image.bayupriyambada.repl.co/img/prod/1.png"
+											class="card-img-top"
+											heigth="250"
+											alt="Gambar 1"
+										/>
+										<div class="card-body">
+											<h5 class="card-title">Title Ecommerce</h5>
+											<p class="card-text">
+												Some quick example text to build on the card
+											</p>
+										</div>
+										<ul class="list-group list-group-flush">
+											<li class="list-group-item">Kategori Dummy</li>
+											<li class="list-group-item">Rp. 50.000</li>
+											<li class="list-group-item">Shop Name</li>
+										</ul>
+										<div class="card-body">
+											<a href="#" class="d-block btn btn-dark"
+												>Tambah Keranjang</a
+											>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-3 col-md-4 col-12">
+									<div class="card">
+										<img
+											src="https://cdn-image.bayupriyambada.repl.co/img/prod/2.png"
+											class="card-img-top"
+											heigth="250"
+											alt="Gambar 1"
+										/>
+										<div class="card-body">
+											<h5 class="card-title">Title Ecommerce</h5>
+											<p class="card-text">
+												Some quick example text to build on the card
+											</p>
+										</div>
+										<ul class="list-group list-group-flush">
+											<li class="list-group-item">Kategori Dummy</li>
+											<li class="list-group-item">Rp. 50.000</li>
+											<li class="list-group-item">Shop Name</li>
+										</ul>
+										<div class="card-body">
+											<a href="#" class="d-block btn btn-dark"
+												>Tambah Keranjang</a
+											>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-3 col-md-4 col-12">
+									<div class="card">
+										<img
+											src="https://cdn-image.bayupriyambada.repl.co/img/prod/3.png"
+											class="card-img-top"
+											heigth="250"
+											alt="Gambar 1"
+										/>
+										<div class="card-body">
+											<h5 class="card-title">Title Ecommerce</h5>
+											<p class="card-text">
+												Some quick example text to build on the card
+											</p>
+										</div>
+										<ul class="list-group list-group-flush">
+											<li class="list-group-item">Kategori Dummy</li>
+											<li class="list-group-item">Rp. 50.000</li>
+											<li class="list-group-item">Shop Name</li>
+										</ul>
+										<div class="card-body">
+											<a href="#" class="d-block btn btn-dark"
+												>Tambah Keranjang</a
+											>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<script src="assets/js/bootstrap.min.js"></script>
 		<script src="assets/js/popper.min.js"></script>
 		<script src="assets/js/query/script.js"></script>
