--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 	</head>
 	<body>
-
-    <!-- header -->
+		<!-- header -->
 		<nav
 			class="navbar navbar-expand-lg shadow-lg fixed-top"
 			style="background-color: #ffffff"
@@ -68,7 +67,6 @@
 		</nav>
 		<!-- header -->
 
-    
 		<!-- carousel -->
 		<div class="container" style="margin-top: 70px">
 			<div class="card">
@@ -165,34 +163,53 @@
 									<select
 										class="form-select"
 										aria-label="Default select example"
+										id="categorySelect"
 									>
-										<option value="all-kategori">Pilihan Kategori</option>
+										<!-- <option selected>Pilihan Toko</option>
 										<option value="1">One</option>
 										<option value="2">Two</option>
-										<option value="3">Three</option>
+										<option value="3">Three</option> -->
 									</select>
 								</div>
 								<div class="col-12">
 									<select
 										class="form-select"
 										aria-label="Default select example"
+										id="shopSelect"
 									>
-										<option selected>Pilihan Toko</option>
+										<!-- <option selected>Pilihan Toko</option>
 										<option value="1">One</option>
 										<option value="2">Two</option>
-										<option value="3">Three</option>
+										<option value="3">Three</option> -->
 									</select>
 								</div>
 								<div class="col-12">
-									<select
-										class="form-select"
-										aria-label="Default select example"
-									>
-										<option selected>Pilihan Harga</option>
-										<option value="1">Rp. 20.000 - 50.0000</option>
-										<option value="1">Rp. 50.000 - 100.0000</option>
-										<option value="1">Rp. 100.000 - 200.0000</option>
-									</select>
+									<div class="input-group">
+										<span class="input-group-text" id="basic-addon3"
+											>Min Harga</span
+										>
+										<input
+											type="text"
+											class="form-control"
+											id="rupiah"
+											oninput="formatRp(this)"
+											aria-describedby="basic-addon3 basic-addon4"
+										/>
+									</div>
+								</div>
+								<div class="col-12">
+									<div class="input-group">
+										<span class="input-group-text" id="basic-addon3"
+											>Maks Harga</span
+										>
+										<input
+											type="text"
+											class="form-control"
+											id="rupiah"
+											oninput="formatRp(this)"
+											aria-describedby="basic-addon3 basic-addon4"
+										/>
+									</div>
 								</div>
 								<div class="col-12">
 									<div class="d-grid">
@@ -377,5 +394,6 @@
 		<script src="assets/js/bootstrap.min.js"></script>
 		<script src="assets/js/popper.min.js"></script>
 		<script src="assets/js/query/script.js"></script>
+		<script src="assets/js/query/helper.js"></script>
 	</body>
 </html>
