fixed bug search query

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 										type="search"
 										class="form-control"
 										placeholder="Cari berdasarkan nama produk..."
+										id="searchProduct"
 									/>
 								</div>
 							</div>
