--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Nitipin Toko - Belanja dengan harga termurah!.</title>
 		<link rel="stylesheet" href="assets/css/style.css" />
-		<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+		    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<link
 			href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
 			rel="stylesheet"
@@ -14,12 +14,11 @@
 	<body>
 		<!-- header -->
 		<nav
-			class="navbar navbar-expand-lg shadow-lg fixed-top"
-			style="background-color: #ffffff"
-			data-bs-theme="light"
+			class="navbar navbar-expand-lg fixed-top"
+			style="background-color: rgb(255, 0, 89) !important; color: white;"
 		>
 			<div class="container">
-				<a class="navbar-brand fw-bold" href="#">MToko</a>
+				<a class="navbar-brand fw-bold" href="/" id="nameProjects"></a>
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -33,9 +32,9 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link active" aria-current="page" href="#">Home</a>
-						</li>
+						</li> -->
 						<li class="nav-item dropdown">
 							<a
 								class="nav-link dropdown-toggle"
@@ -73,50 +72,46 @@
 
 		<!-- carousel -->
 		<div class="container" style="margin-top: 70px">
-			<div class="card">
-				<div class="card-body">
-					<div id="carouselExample" class="carousel slide">
-						<div class="carousel-inner" id="carousel"></div>
-						<button
-							class="carousel-control-prev"
-							type="button"
-							data-bs-target="#carouselExample"
-							data-bs-slide="prev"
-						>
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="32"
-								height="32"
-								fill="currentColor"
-								class="bi bi-arrow-left-square-fill"
-								viewBox="0 0 16 16"
-							>
-								<path
-									d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z"
-								/>
-							</svg>
-						</button>
-						<button
-							class="carousel-control-next"
-							type="button"
-							data-bs-target="#carouselExample"
-							data-bs-slide="next"
-						>
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="32"
-								height="32"
-								fill="currentColor"
-								class="bi bi-arrow-right-square-fill"
-								viewBox="0 0 16 16"
-							>
-								<path
-									d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1z"
-								/>
-							</svg>
-						</button>
-					</div>
-				</div>
+			<div id="carouselExample" class="carousel slide ">
+				<div class="carousel-inner" id="carousel"></div>
+				<button
+					class="carousel-control-prev"
+					type="button"
+					data-bs-target="#carouselExample"
+					data-bs-slide="prev"
+				>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="32"
+						height="32"
+						fill="currentColor"
+						class="bi bi-arrow-left-square-fill"
+						viewBox="0 0 16 16"
+					>
+						<path
+							d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z"
+						/>
+					</svg>
+				</button>
+				<button
+					class="carousel-control-next"
+					type="button"
+					data-bs-target="#carouselExample"
+					data-bs-slide="next"
+				>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="32"
+						height="32"
+						fill="currentColor"
+						class="bi bi-arrow-right-square-fill"
+						viewBox="0 0 16 16"
+					>
+						<path
+							d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1z"
+						/>
+					</svg>
+				</button>
 			</div>
 		</div>
 		<!-- carousel -->
@@ -124,31 +119,33 @@
 		<!-- sidebar && products -->
 		<div class="container my-4">
 			<div class="row g-2">
-				<div class="col-12 col-md-4 col-sm-4">
-					<div class="card">
-						<div class="card-body">
-							<div class="row gy-4">
+				<div class="col-12 col-md-3 col-sm-3">
+					<div class="card p-2" style="background-color: #ffffff !important;" >
+						<div class="row gy-4">
 								<div class="col-12">
 									<input
 										type="search"
 										class="form-control"
-										placeholder="Cari berdasarkan nama produk..."
+										placeholder="Nama Produk ..."
 										id="searchProduct"
 									/>
 								</div>
 							</div>
-						</div>
 					</div>
 					<div class="card mt-2">
 						<div class="card-body">
 							<div class="row gy-4">
 								<div class="col-12">
-									<select class="categoryClass form-control" id="categorySelect">
-									</select>
+									<select
+										class="categoryClass form-control"
+										id="categorySelect"
+									></select>
 								</div>
 								<div class="col-12">
-									<select class="shopClass form-control" id="shopSelect">
-									</select>
+									<select
+										class="shopClass form-control"
+										id="shopSelect"
+									></select>
 								</div>
 								<div class="col-12">
 									<label for="minPrice">Min Price:</label>
@@ -162,7 +159,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-12 col-md-8 col-sm-8">
+				<div class="col-12 col-md-9 col-sm-8">
 					<div class="card">
 						<div class="card-body">
 							<span>Total <b id="count"></b> Produk</span>
@@ -179,6 +176,13 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- footer -->
+		<footer class="py-2 bg-light d-flex justify-content-center">
+			<span class="text-center">Dirancang oleh bayupriyambada - NitipinToko.</span>
+			
+		</footer>
+		<!-- footer -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
 			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -191,15 +195,22 @@
 		></script>
 		<script type="module" src="assets/js/query/script.js"></script>
 		<script type="module" src="assets/js/query/helper.js"></script>
-		<script type="module" src="assets/js/components/listPriceSelect.js"></script>
-		<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+		<script
+			type="module"
+			src="assets/js/components/listPriceSelect.js"
+		></script>
+		<script
+			src="https://code.jquery.com/jquery-3.7.1.min.js"
+			integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+			crossorigin="anonymous"
+		></script>
 		<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 		<script>
-			$(document).ready(function() {
-					$('.categoryClass').select2();
+			$(document).ready(function () {
+				$(".categoryClass").select2();
 			});
-			$(document).ready(function() {
-					$('.shopClass').select2();
+			$(document).ready(function () {
+				$(".shopClass").select2();
 			});
 		</script>
 	</body>
